feat(constants): add shortName for module and update imports
- Introduced a shortName constant for the module in constants.yaml.
- Removed shortName from module.json to maintain consistency.
- Updated import statements in config.js to include file extensions.
- Modified OverMyHead class to include shortName for backward compatibility.
- Removed shortName validation from module manifest tests.

--- a/constants.yaml
+++ b/constants.yaml
@@ -18,6 +18,9 @@ moduleManagement:
   # How to refer to the module in the logs
   # Can be "title", "id", "name", or "shortName"
   referToModuleBy: "title"
+  
+  # Short name for the module
+  shortName: "OMH"
 
   defaults:
     # Description: Specifies the default path where Foundry VTT modules are located within the game system
