feat: add module alias for module.json in config files
- Added '@module' alias pointing to 'module.json' in babel.config.js
- Updated '@module' alias in jsconfig.json to reference 'module.json'
- Included '@module' resolution in vite.config.js for module loading

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,7 @@
       "@validator": ["src/utils/static/validator.js"],
       "@integrationTests/*": ["tests/integration/*"],
       "@mocks/*": ["tests/mocks/*"],
+      "@module": ["module.json"],
     }
   },
   "include": ["src/**/*", "tests/**/*"],
