chore: add .vscode/settings.json to .gitignore
- Exclude .vscode/settings.json from version control to prevent local settings from being shared.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ coverage/
 dist/
 src/contexts/helpers/contextContainer.unit.test.js
 .vscode/foundryvtt-over-my-head.code-workspace
+.vscode/settings.json
