chore: update .gitignore to include .vscode directory
- Added .vscode/ to ignore list to prevent workspace files from being tracked.
- Retained .vscode/settings.json to ensure specific settings are ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ node_modules/
 coverage/
 dist/
 src/contexts/helpers/contextContainer.unit.test.js
-.vscode/foundryvtt-over-my-head.code-workspace
+.vscode/
 .vscode/settings.json
