refactor(dev): Extract build and deploy logic into modular architecture
Break down monolithic buildAndDeploy.js into focused, testable modules:

- **userDataDirFinder.js**: Cross-platform FoundryVTT directory discovery
- **moduleDirManager.js**: Module directory creation and validation
- **moduleBuilder.js**: Build process orchestration with ViteRunner
- **deployer.js**: Intelligent file syncing with change detection
- **buildUtils.js**: Shared utilities for build artifact cleanup

**Enhanced capabilities:**
- Smart file syncing only copies changed files (mtime/size comparison)
- Automatic cleanup of accidental root build artifacts (main.js, main.js.map)
- Robust error handling and logging throughout
- Comprehensive JSDoc documentation for all public APIs

**Testing improvements:**
- Complete unit test coverage for all modules (100+ test cases)
- Performance test suite to ensure deployment efficiency
- Mock-based testing for reliable CI/CD execution

**Package.json updates:**
- New `dev` script runs integrated build-and-deploy workflow
- Separate `build:prod` for production builds with NODE_ENV
- `prerelease` and `release` scripts for automated publishing

This modular architecture improves maintainability, testability, and enables
future enhancements like parallel builds or custom deployment strategies.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "vite": "^7.1.1"
   },
   "scripts": {
+    "dev": "node ./scripts/dev/buildAndDeploy.js",
     "build": "vite build",
-    "dev": "vite build --watch",
+    "build:prod": "NODE_ENV=production vite build",
+    "prerelease": "npm run test && npm run build:prod",
+    "release": "npm run prerelease && git add dist/ && git commit -m 'Build artifacts'",
     "test": "jest --coverage",
     "test:unit": "jest --testMatch=\"**/*.unit.test.js\" --coverage",
     "test:integration": "jest --testMatch=\"**/*.int.test.js\"",
