--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ node_modules/
 coverage/
 dist/
 src/contexts/helpers/contextContainer.unit.test.js
-.vscode/
-.vscode/settings.json
+.vscode/foundryvtt-over-my-head.code-workspace
+tree.txt
+tree.json
