feat(settings,i18n,utils): auto-localize settings via SettingLocalizer; convert to i18n keys; expose StaticUtils.localizer
- Auto-localize settings during registration by resolving a localizer from `utils` with fallback to `game.i18n` (`SettingsHandler.register()` now localizes before registering).
- Introduce `SettingLocalizer` helper to localize `config.name`, `config.hint`, and `config.choices`.
- Convert hardcoded setting labels to i18n keys in `constants.yaml`; add corresponding strings to `lang/en.json`.
- Expose `StaticUtils.localizer` alias (class reference) and document `getSetting` proxy usage in static utils.
- Update documentation across utils and settings helpers; add markdownlint suppressions and example usage.

Files:
- constants.yaml: replace literals with i18n keys for settings and choices.
- lang/en.json: add English strings for settings and choices.
- src/handlers/settingsHandler.js: import and use `SettingLocalizer` with full `utils`.
- src/handlers/settingsHelpers/settingLocalizer.js: new helper.
- src/handlers/settingsHelpers/settingLocalizer.unit.test.js: new tests.
- src/handlers/settingsHelpers/README.md: document localization flow and helper.
- src/utils/README.md, src/utils/static/README.md: document `localizer` alias and `getSetting`; lint tweaks.
- src/utils/static/static.js: add `localizer` alias to `Localizer` class.

Tests:
- Add unit tests for `SettingLocalizer` including utils-first preference and `game.i18n` fallback.

Notes:
- No breaking changes. `SettingsHandler.register()` now ensures settings are localized automatically.

--- a/constants.yaml
+++ b/constants.yaml
@@ -188,8 +188,8 @@ settings:
   settingsList:
     - key: "useModule"
       config:
-        name: "Use Module"
-        hint: "Enable or disable the use of modules"
+        name: "foundryvtt-over-my-head.settings.useModule.name"
+        hint: "foundryvtt-over-my-head.settings.useModule.hint"
         scope: "world"
         config: true
         type: Boolean
@@ -202,8 +202,8 @@ settings:
 
     - key: "debugMode"
       config:
-        name: "Debug Mode"
-        hint: "Enable or disable debug mode"
+        name: "foundryvtt-over-my-head.settings.debugMode.name"
+        hint: "foundryvtt-over-my-head.settings.debugMode.hint"
         scope: "user"
         config: true
         type: Boolean
@@ -214,12 +214,12 @@ settings:
 
     - key: "behaviorTokens"
       config:
-        name: "Behavior"
-        hint: "Configure what tokens the module should consider to determine occlusion mode.\nDefault is to include tokens that are both active and controlled."
+        name: "foundryvtt-over-my-head.settings.behaviorTokens.name"
+        hint: "foundryvtt-over-my-head.settings.behaviorTokens.hint"
         choices: {
-          default: "Active and Controlled",
-          onlyActive: "Only Active Tokens",
-          onlyControlled: "Only Controlled Tokens"
+          default: "foundryvtt-over-my-head.settings.behaviorTokens.choices.default",
+          onlyActive: "foundryvtt-over-my-head.settings.behaviorTokens.choices.onlyActive",
+          onlyControlled: "foundryvtt-over-my-head.settings.behaviorTokens.choices.onlyControlled"
         }
         scope: "world"
         config: true
@@ -231,8 +231,8 @@ settings:
 
     - key: "behaviorParty"
       config:
-        name: "Behavior Party"
-        hint: "Configure if the module should consider party members for occlusion mode, or only the controlled tokens."
+        name: "foundryvtt-over-my-head.settings.behaviorParty.name"
+        hint: "foundryvtt-over-my-head.settings.behaviorParty.hint"
         scope: "world"
         config: true
         type: Boolean
@@ -243,12 +243,12 @@ settings:
 
     - key: "behaviorGM"
       config:
-        name: "Behavior GM"
-        hint: "Configure if the module should be active for the GM as well"
+        name: "foundryvtt-over-my-head.settings.behaviorGM.name"
+        hint: "foundryvtt-over-my-head.settings.behaviorGM.hint"
         choices: {
-          default: "Active, Only Active Tokens",
-          onlyNPCs: "Active, only NPCs",
-          inactive: "Inactive"
+          default: "foundryvtt-over-my-head.settings.behaviorGM.choices.default",
+          onlyNPCs: "foundryvtt-over-my-head.settings.behaviorGM.choices.onlyNPCs",
+          inactive: "foundryvtt-over-my-head.settings.behaviorGM.choices.inactive"
         }
         scope: "world"
         config: true
