feat(placeable-handler): initial WIP commit
- Add PlaceableHandler with getter, setter, checker wrappers
- Implement PositionChecker with configurable keys/uses from constants
- Add unit tests for placeable handlers and helpers
- Add integration test for PositionChecker overrides from constants.yaml

--- a/constants.yaml
+++ b/constants.yaml
@@ -177,6 +177,20 @@ placeables:
       - "bottom-left"
       - "bottom-right"
 
+# Configuration for PositionChecker (keys/types can be overridden here)
+positionChecker:
+  checkTypes:
+    UNDER: "under"
+    OVER: "above" # Overrides default 'over' for elevation checks
+  positionUses:
+    CENTER: "center"
+    RECTANGLE: "rectangle"
+  methodKeys:
+    CENTER_RECTANGLE: "center-rectangle"
+    RECTANGLE_CENTER: "rectangle-center"
+    RECTANGLE_RECTANGLE: "rectangle-rectangle"
+    CENTER_CENTER: "center-center"
+
 # Settings for the module
 settings:
   requiredKeys:
