--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-import-meta": "^2.3.2",
+    "cypress": "^15.0.0",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
