--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ src/contexts/helpers/contextContainer.unit.test.js
 .vscode/foundryvtt-over-my-head.code-workspace
 tree.txt
 tree.json
+docker/foundry-data/
+docker/secrets.json
+docker/.env
