--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ src/contexts/helpers/contextContainer.unit.test.js
 .vscode/foundryvtt-over-my-head.code-workspace
 tree.txt
 tree.json
+foundry-cache/
 docker/foundry-data/
+docker/foundry-cache/
 docker/secrets.json
 docker/.env
