chore(dev): compose.dev wired with patches, env, volumes + overrides for cache/non-root

--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -2,51 +2,123 @@ secrets:
   config_json:
     file: ./secrets.json
 
+volumes:
+  foundry-v13-data:
+  foundry-v12-data:
+  foundry-v11-data:
+
 services:
   foundry-v13:
     image: felddy/foundryvtt:release
     container_name: foundry-v13
     hostname: foundry-v13
+    user: "0:0"
     ports:
       - "30013:30000"
     volumes:
+      - foundry-v13-data:/data
+      - type: bind
+        source: ./container-config.json
+        target: /config
+        read_only: true
       - type: bind
         source: ../dist
-        target: /data/Data/modules/foundryvtt-over-my-head
+        target: /host/dist
         read_only: true
+      - type: bind
+        source: ./patches/common
+        target: /container_patches
+      - type: bind
+        source: ../tests/test-world/v13
+        target: /host/world/test-world
+        read_only: false
+      - type: bind
+        source: ./foundry-cache/v13
+        target: /data/container_cache
     secrets:
       - source: config_json
         target: config.json
+    env_file:
+      - ./env/.env # Common env vars for all versions
+      - ./env/.v13.env # Loaded second, can override any duplicates from above
+    environment: # overrides any value for this variable from env files
+      - CONTAINER_PATCHES=/container_patches
+      - FETCH_STAGGER_SECONDS=4
 
   foundry-v12:
     image: felddy/foundryvtt:12
     container_name: foundry-v12
     hostname: foundry-v12
+    user: "0:0"
     ports:
       - "30012:30000"
     volumes:
+      - foundry-v12-data:/data
+      - type: bind
+        source: ./container-config.json
+        target: /config
+        read_only: true
       - type: bind
         source: ../dist
-        target: /data/Data/modules/foundryvtt-over-my-head
+        target: /host/dist
         read_only: true
+      - type: bind
+        source: ./patches/common
+        target: /container_patches
+      - type: bind
+        source: ../tests/test-world/v12
+        target: /host/world/test-world
+        read_only: false
+      - type: bind
+        source: ./foundry-cache/v12
+        target: /data/container_cache
     secrets:
       - source: config_json
         target: config.json
+    env_file:
+      - ./env/.env # Common env vars for all versions
+      - ./env/.v12.env # Loaded second, can override any duplicates from above
+    environment: # overrides any value for this variable from env files
+      - CONTAINER_PATCHES=/container_patches
+      - FETCH_STAGGER_SECONDS=2
 
   foundry-v11:
     image: felddy/foundryvtt:11
     container_name: foundry-v11
     hostname: foundry-v11
+    user: "0:0"
     ports:
       - "30011:30000"
     volumes:
+      - foundry-v11-data:/data
+      - type: bind
+        source: ./container-config.json
+        target: /config
+        read_only: true
       - type: bind
         source: ../dist
-        target: /data/Data/modules/foundryvtt-over-my-head
+        target: /host/dist
         read_only: true
+      - type: bind
+        source: ./patches/common
+        target: /container_patches
+      - type: bind
+        source: ../tests/test-world/v11
+        target: /host/world/test-world
+        # RW to allow bidirectional sync back to host
+        read_only: false
+      - type: bind
+        source: ./foundry-cache/v11
+        target: /data/container_cache
     secrets:
       - source: config_json
         target: config.json
+    env_file:
+      - ./env/.env # Common env vars for all versions
+      - ./env/.v11.env # Loaded second, can override any duplicates from above
+    environment: # overrides any value for this variable from env files
+      - CONTAINER_PATCHES=/container_patches
+      - FETCH_STAGGER_SECONDS=0
 
   builder:
     image: node:20-alpine
