feat(docker/env): add WORLD_SYNC_* env examples
Add commented examples for WORLD_SYNC_ENABLED and WORLD_INITIAL_SYNC to the docker env file so developers know the control knobs available for world syncing.

--- a/docker/env/.env
+++ b/docker/env/.env
@@ -19,3 +19,9 @@ CONTAINER_PRESERVE_CONFIG=true
 # Set host user and group IDs, defaulting to 1000 if not set
 HOST_UID=${UID:-1000}
 HOST_GID=${GID:-1000}
+
+# World sync controls (used by 10-sync-host-content)
+# Enable/disable world continuous sync (1=enabled, 0=disabled)
+# WORLD_SYNC_ENABLED=1
+# Skip initial sync at startup but keep background loop (1=do initial sync, 0=skip)
+# WORLD_INITIAL_SYNC=1
