feat: add alias for docker directory in config files
- Added '@docker' alias in babel.config.js for easier imports.
- Updated jsconfig.json to include '@docker/*' path mapping.
- Modified vite.config.js to resolve '@docker' to the docker directory.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+        "@docker/*": ["docker/*"],
       "@config": ["src/config/config.js"],
       "@constants": ["src/config/constants.js"],
       "@manifest": ["src/config/manifest.js"],
