--- a/docker/env/.env
+++ b/docker/env/.env
@@ -25,3 +25,9 @@ HOST_GID=${GID:-1000}
 # WORLD_SYNC_ENABLED=1
 # Skip initial sync at startup but keep background loop (1=do initial sync, 0=skip)
 # WORLD_INITIAL_SYNC=1
+
+# Config-driven sync controls
+# Read continuous_sync from container-config (1=enabled, 0=disabled)
+# SYNC_USE_CONFIG=1
+# Keep default module dist mirror (1=enabled, 0=disabled)
+# MODULE_MIRROR_ENABLED=1
