--- a/docker/env/.env
+++ b/docker/env/.env
@@ -31,3 +31,7 @@ HOST_GID=${GID:-1000}
 # SYNC_USE_CONFIG=1
 # Keep default module dist mirror (1=enabled, 0=disabled)
 # MODULE_MIRROR_ENABLED=1
+
+# Wrapper default script extension (used by entrypoint wrappers)
+# Can be 'mjs' (default) or 'cjs'. Leading dot optional.
+# WRAPPER_SCRIPT_EXT=mjs
