feat: Add 'composition' config for compose generation

--- a/docker/container-config.example.json
+++ b/docker/container-config.example.json
@@ -2,44 +2,59 @@
   "systems": {
     "example_system": {
       "name": "Example System",
-  "manifest": "",
-  "path": "/data/container_cache/example-system.zip",
+      "manifest": "",
+      "path": "/data/container_cache/example-system.zip",
       "install_at_startup": true
     },
     "system_to_override": {
       "name": "System To Override",
-  "manifest": "https://example.com/system-to-override.json",
-  "path": "",
+      "manifest": "https://example.com/system-to-override.json",
+      "path": "",
       "install_at_startup": true
     }
   },
   "modules": {
     "example_module": {
       "name": "Example Module",
-  "manifest": "https://example.com/module.json",
-  "path": "",
+      "manifest": "https://example.com/module.json",
+      "path": "",
       "install_at_startup": true
     },
     "module_to_override": {
       "name": "Module To Override",
-  "manifest": "",
-  "path": "/data/container_cache/module-to-override.zip",
+      "manifest": "",
+      "path": "/data/container_cache/module-to-override.zip",
       "install_at_startup": true
     }
   },
   "worlds": {
     "example_world": {
       "name": "Example World",
-  "manifest": "https://example.com/world.json",
-  "path": "../docker/shared/v13/worlds/example_world",
+      "manifest": "https://example.com/world.json",
+      "path": "../docker/shared/v13/worlds/example_world",
       "install_at_startup": false,
       "check_presence": true
     },
     "world_to_override": {
       "name": "World To Override",
-  "manifest": "",
-  "path": "../docker/shared/v13/worlds/world_to_override",
+      "manifest": "",
+      "path": "../docker/shared/v13/worlds/world_to_override",
       "install_at_startup": false
+    }
+  },
+  "composition": {
+    "baseImage": "felddy/foundryvtt",
+    "user": "0:0",
+    "version_params": {
+      "name": "foundry-v{version}",
+      "tag": "release",
+      "port": "300{version}",
+      "versionDir": "v{version}",
+      "envSuffix": "v{version}"
+    },
+    "builder": {
+      "enabled": true,
+      "image": "node:20-alpine"
     }
   },
   "versions": {
