feat: Add example 'composition_params' override for v12

--- a/docker/container-config.example.json
+++ b/docker/container-config.example.json
@@ -88,6 +88,17 @@
           }
         }
       }
+    },
+    "12": {
+      "supported": true,
+      "install": {
+        "systems": { "example_system": {} },
+        "modules": { "example_module": {} }
+      },
+      "composition_params": {
+        "name": "custom-v12",
+        "port": 31234
+      }
     }
   }
 }
