--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "jest - OverMyHead tests",
+			"label": "vitest - OverMyHead tests",
 			"type": "shell",
 			"command": "npm test -- src/overMyHead.unit.test.mjs tests/integration/overMyHead.integration.test.mjs",
 			"isBackground": false,
